# fm_image_tagger

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ImageTagger/: CommandTagger.py  Display.py  ImageTagger.py  OllamaCaption.py  Predict.py  Rename.py  TagEdit.py  Tagger.py  __main__.py
src/fm_image_tagger/: __main__.py  command_tagger.py  display.py  fm_image_tagger.py  tag_edit.py  tagger.py  total.py
src/fm_image_tagger/tests/: test_tag_edit.py
