[project]
name = "ImageTagger"
"version" = "0.3.1"
description = "Caption tagger tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "click>=8.1.7",
 "huggingface-hub>=0.25.2",
 "numpy>=2.1.2",
 "ollama>=0.3.3",
 "onnxruntime>=1.19.2",
 "pandas>=2.2.3",
 "pillow",
]

[project.scripts]
ImageTagger = "ImageTagger.ImageTagger:run"
